feat: copy file/folder before sending to metrics; add pageCount, input, and parent/children relationship for the same table on DashboardFile table; add conditions related to page_count and input in the queries on DashboardFileRepository; add worfolder on DocShifterMetricsMessage; create FilePageCountDistributionSample interface